Refactor EntryController and EntryService to change the return type of getEntryIdsByTimeRange from Map to List of EntryResponse, improving data structure for client consumption. Update endpoint path for clarity.